# MCP-Attemp-v1

./: ChatGPT_Custom_Client_v2.py  Claude_Custom_Client_using_Gemini_v2.py  Claude_Custom_Client_using_Gemini_v3.py  Claude_Custom_Clienty_v1.py  MCP_MathTools.py  MCP_StringTools.py  New_Client_v2.py  Run 1.txt  Run 2.txt  Run 4.txt  Testing Dictionary.txt  leng.py  main.py  pyproject.toml  requirements.txt
Ajit Kumar PoC/: Custom_Python_Client-v1.py  MCP_Server_Ollama_Example.py  Readme.txt
Power_BI_MCP/extension/: package.json
Reddit MCP/: Readme.txt  Reddit_MCP_client_v1.py  Reddit_MCP_server_v1.py
