[project]
name = "mcp-training-project-1"
version = "0.1.0"
description = "Trying to create an MCP server and MCP client use-cases. Main objective is to try and connect to the PowerBI MCP Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-groq>=1.1.2",
    "langchain-mcp-adapters>=0.2.2",
    "langgraph>=1.1.8",
    "mcp[cli]>=1.27.0",
]
